<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amirely.elite.bookme.LoginActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@color/colorPrimaryLight">


        <TextView
            android:id="@+id/loginLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginLogo"
            app:srcCompat="@drawable/user_icon" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/username_or_email"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/imageViewUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewUser"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUser" />

        <ImageView
            android:id="@+id/imageViewLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@+id/imageViewUser"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUser"
            app:srcCompat="@drawable/lock_icon" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/imageViewLock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLock" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="188dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent"
            android:text="@string/login_text"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toEndOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:onClick="logIn"/>

        <TextView
            android:id="@+id/textViewRecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/recover_password_msg"
            android:textColor="@color/lightBlue"
            app:layout_constraintEnd_toStartOf="@+id/loginButton"
            app:layout_constraintStart_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:onClick="recoverPassword"/>

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/signup_message"
            android:textColor="@color/lightBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecoverPassword"
            android:onClick="goToSignUp"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
