<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amirely.elite.bookme.SignUpActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@color/colorPrimaryLight">


        <TextView
            android:id="@+id/signupLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupLogo"
            app:srcCompat="@drawable/name_icon2" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/name_icon2" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/mail_icon" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/user_icon" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/imageViewUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewUser"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUser" />

        <ImageView
            android:id="@+id/imageViewLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/imageViewUser"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUser"
            app:srcCompat="@drawable/lock_icon" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/imageViewLock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLock" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="162dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:onClick="signUp"
            android:text="@string/signup_hint"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toEndOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textViewRecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_msg"
            android:textColor="@color/lightBlue"
            app:layout_constraintEnd_toStartOf="@+id/loginButton"
            app:layout_constraintStart_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:onClick="goToLogin"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
